# hackathon-2025

./: README.md  pyproject.toml  requirements.txt  setup.py  transcript-ara.txt  transcript-hindi.txt  transcript-jap.txt  transcript-marathi.txt
.devcontainer/: devcontainer.json
None/: faq.txt
faq/: faq.txt  sentiment_analysis.txt
src/: streamlit_ui.py
src/meeting_recordings_analysis/: agents.py  llm_config.py  main.py  streamlit_ui.py  tasks.py
src/meeting_recordings_analysis/config/: agents.yaml  tasks.yaml
src/meeting_recordings_analysis/gmail/: credentials.json  token.json  utils.py
src/meeting_recordings_analysis/jira/: utils.py
src/meeting_recordings_analysis/teams/: utils.py
src/meeting_recordings_analysis/tools/: gmail_custom_tool.py  jira_custom_tool.py  slack_custom_tool.py
