[project]
name = "meeting_recordings_analysis"
version = "0.1.0"
description = "meeting_recordings_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
meeting_recordings_analysis = "meeting_recordings_analysis.main:run"
run_crew = "meeting_recordings_analysis.main:run"
train = "meeting_recordings_analysis.main:train"
replay = "meeting_recordings_analysis.main:replay"
test = "meeting_recordings_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
